--- a/package.json
+++ b/package.json
@@ -1,17 +1,20 @@
 {
-  "name": "single-instance",
+  "name": "@doridian/single-instance",
+  "publishConfig": {
+    "access": "public"
+  },
   "version": "0.0.1",
   "description": "Check if an instance of the current application is running or not.",
-  "main": "index.js",
-  "dependencies": {
-    "rsvp": "^3.1.0"
-  },
+  "main": "dist/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "npm run build && node dist/index.js",
+    "lint": "eslint --report-unused-disable-directives --cache --color . && prettier --check .",
+    "fmt": "eslint --fix . && prettier --write .",
+    "build": "rimraf dist && tsc --project ."
   },
   "repository": {
     "type": "git",
-    "url": "git+ssh://git@github.com/pierrefourgeaud/node-single-instance.git"
+    "url": "https://github.com/Doridian/node-single-instance.git"
   },
   "keywords": [
     "single",
@@ -22,7 +25,12 @@
   "author": "Pierre Fourgeaud",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/pierrefourgeaud/node-single-instance/issues"
+    "url": "https://github.com/Doridian/node-single-instance/issues"
   },
-  "homepage": "https://github.com/pierrefourgeaud/node-single-instance#readme"
+  "homepage": "https://github.com/Doridian/node-single-instance#readme",
+  "devDependencies": {
+    "@types/node": "^22.4.0",
+    "rimraf": "^6.0.1",
+    "typescript": "^5.5.4"
+  }
 }
