--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,8 +3,8 @@
         "module": "ES2022",
         "target": "ES2022",
         "lib": ["ES2022"],
-        "declaration": false,
-        "declarationMap": false,
+        "declaration": true,
+        "declarationMap": true,
         "sourceMap": true,
         "inlineSources": true,
         "outDir": "dist",
