--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "fmt": "eslint --fix . && prettier --write .",
     "build": "rimraf dist && tsc --project ."
   },
+  "type": "module",
   "repository": {
     "type": "git",
     "url": "https://github.com/Doridian/node-single-instance.git"
